tests/ui/feature-gates/feature-gate-cfg_overflow_checks.rs
#![crate_type = "lib"]

#[cfg(overflow_checks)] //~ ERROR `cfg(overflow_checks)` is experimental
pub fn cast(v: i64)->u32{
    todo!()
}
